# gridlabd-workflow-template

./: .gitignore  MY_PROJECT.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: analyse.py  main.glm  prepare.py
